--- a/css/override_stylesheet.css
+++ b/css/override_stylesheet.css
@@ -69,7 +69,7 @@ overflow: scroll;
   margin-bottom: 5px;
   }
 .navbar{
-  margin-bottom: 5px;
+  margin-bottom: 0px;
 }
 div.dropdown-menu {
     padding: 15px;
@@ -90,4 +90,8 @@ div.dropdown-menu input.btn {
     width: 100%;
     height: 32px;
     font-size: 13px;
+}
+.container-fluid {
+padding-right: 0px;
+padding-left: 0px;
 }
