--- a/css/override_stylesheet.css
+++ b/css/override_stylesheet.css
@@ -7,6 +7,9 @@
 	font-family: Arial,Helvetica,sans-serif;
 	border: #999 solid 1px;
 	max-height: 100%;
+	position: absolute;
+	overflow: auto;
+	width: 20%;
 }
 #toolbox .modal-body{
 	padding: 0px;
@@ -49,7 +52,7 @@
 }
 #search
 {
-	width:95%;
+	width:80%;
 }
 #searchResults
 {
